# bcv-exchange-rates

./: .env-example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  run.sh  setup.py  vercel.json
bcv_exchange_rates/: bcv.py  index.py  requirements.txt  utilities.py
src/: get_bcv_exchange_rates.py  index.py  requirements.txt
tests/: test_bcv.py
